--- a/ms_file_chunker/requirements.txt
+++ b/ms_file_chunker/requirements.txt
@@ -8,6 +8,7 @@ psutil==5.7.0
 pyparsing==2.4.7
 rasterio==1.1.4
 Shapely==1.7.0
+shortuuid==1.0.1
 slidingwindow==0.0.13
 snuggs==1.4.7
 tqdm==4.46.0
