labelmap file download code

--- a/ms_ensemble/.env
+++ b/ms_ensemble/.env
@@ -1,3 +1,4 @@
 S3_MODEL_DIR_BASE_PATH=gcw-treetect-tree-detection-dev/Models/worldview/development
 S3_DATA_UPLOAD_PATH=gcw-treetect-tree-detection-dev/ensemble_results
 S3_LOG_FILE_UPLOAD_PATH=gcw-treetect-tree-detection-dev/ensemble_logs
+S3_LABEL_MAP_PATH=gcw-treetect-tree-detection-dev/model_training_base_file/label_map.pbtxt
