updat ecode for transfer learn process and upload config script

--- a/ms_model_training/.env
+++ b/ms_model_training/.env
@@ -2,3 +2,4 @@ MODEL_BASE_ARCHITECTURE_S3_PATH=gcw-treetect-tree-detection-dev/model_training_b
 LABLE_FILE_S3_PATH=gcw-treetect-tree-detection-dev/model_training_base_file/label_map.pbtxt
 S3_LOG_FILE_UPLOAD_PATH=gcw-treetect-tree-detection-dev/training_logs
 S3_MODEL_UPLOAD_PATH=gcw-treetect-tree-detection-dev/temp_data/demo_img
+CONFIG_FILE_S3_PATH=gcw-treetect-tree-detection-dev/temp_data/config_files/training_config/da157cfd-a6d9-4bd9-b21b-dac8e1510f2b_training_config.json
