add config file , upload script, and auto download

--- a/ms_training_data_generation/.env
+++ b/ms_training_data_generation/.env
@@ -1,6 +1,2 @@
-S3_TIF_FILES_DIR_PATH=gcw-treetect-common-input-data-dev/input_data/chunked_data/worldview/Amsterdam_2018-07-26_10_57_10400100407D9200_nr_modified_1157X1158
-S3_SHAPE_FILES_DIR_PATH=gcw-treetect-tree-detection-dev/Annotations/worldview/Amsterdam_2018-07-26_10_57_10400100407D9200_nr_modified/
-S3_TRAINING_DATA_UPLOAD_DIR_PATH=gcw-treetect-tree-detection-dev/test_data
 S3_LOG_FILE_UPLOAD_PATH=gcw-treetect-tree-detection-dev/test_logs
-CSV_TEST_PORTION=0.2
-
+S3_CONFIG_FILE_PATH=gcw-treetect-tree-detection-dev/temp_data/config_files/data_generation_config/sds.json
