--- a/ms_point_data_comparison/Dockerfile-pointdata
+++ b/ms_point_data_comparison/Dockerfile-pointdata
@@ -1,7 +1,7 @@
 FROM ubuntu
 WORKDIR /
 RUN apt update -y && apt install python3 -y && apt install python3-pip -y &&  pip3 install boto
-ADD ./TreeTect/ms_point_data_comparison /
+ADD TreeTect/ms_point_data_comparison /
 RUN pip3 install -r requirement.txt
 RUN pip3 install awscli
 WORKDIR src
