--- a/ms_file_chunker/Dockerfile
+++ b/ms_file_chunker/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu
 WORKDIR /
 RUN apt update -y && apt install python3 -y && apt install python3-pip -y &&  pip3 install boto
-ADD . /
+ADD ./TreeTect/ms_file_chunker/ /
 RUN pip3 install -r requirements.txt
 RUN pip3 install awscli
 WORKDIR src
